syntax = "proto3";

import "common.proto";

package com.hymnsmobile.pipeline.russian;

option java_multiple_files = true;

message RussianHymns {
  repeated RussianHymn russianHymns = 1;
}

message RussianHymn {
  int32 number = 1;
  string title = 2;
  repeated Verse lyrics = 3;
  string category = 4;
  string sub_category = 5;
  string meter = 6;
  com.hymnsmobile.pipeline.models.SongReference parent = 7;
}

message Verse {
  string verse_type = 1;
  repeated com.hymnsmobile.pipeline.models.Line lines = 2;
}

message Lyrics {
  repeated Verse verses = 1;
}
